[fix #45279039] increase z-index of sidebar wrapper

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -40,6 +40,7 @@
     }
 
     #sidebar_wrapper {
+        z-index: 10;
         position: fixed;
         right: 0;
         top: $header-height;
